# rust_hyper_simple_api

./: .dockerignore  Cargo.toml  Dockerfile
src/: main.rs  server.rs
src/views/: generic_error_views.rs  health_check.rs  mod.rs  response.rs  types.rs
