[package]
name = "demo_backend"
version = "0.1.0"
authors = ["chiliseed <info@chiliseed.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
hyper = "0.13.1"
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.3.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
