[package]
name = "demo_backend"
version = "0.1.0"
authors = ["chiliseed <info@chiliseed.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
futures = "0.3.4"
hyper = "0.13.5"
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.3.1"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
tokio = { version = "0.2", features = ["full"] }
